Fix navbar opacity and overlay opacity on mobile

--- a/src/components/image-link.module.css
+++ b/src/components/image-link.module.css
@@ -14,10 +14,21 @@
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0%;
   padding: 20px;
 }
 
 .overlay:hover {
   opacity: 100%;
+}
+
+@media (hover:hover) {
+  .overlay {
+    opacity: 0%;
+  }
+}
+
+@media (hover:none) {
+  .overlay {
+    opacity: 100%;
+  }
 }
